--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     const types = ['Scattergun','Pistol','Bat','Rocket Launcher','Shotgun','Shovel','Flamethrower','Flare Gun','Fireaxe','Grenade Launcher','Sticky Bomb Launcher','Bottle','Minigun','Fists','Wrench','Medi Gun','Syringe Gun','Bonesaw','Sniper Rifle','Compound Bow','Kukri','Revolver','Knife'];
 
     const goodattributes = ['+%n Damage','+%n Fire Rate','','+%n Accuracy','On Kill: +%n Health','Regen %n Ammo on Hit','+%n Reload Speed','Weapon deploys +%n slower','On kill: Be fast for %s seconds'];
-    const badattributes  = ['-%n Damage','-%n Fire Rate','-%n Player Speed','-%n Spread on weapon','+%n more damage on yourself','When firing the weapon: Mark yourself for death for %s seconds','-%n Reload Speed','Weapon deploys +%n slower',''];
+    const badattributes  = ['-%n Damage','-%n Fire Rate','-%n Player Speed','-%n Spread on weapon','+%n self-damage on yourself','When firing the weapon: Mark yourself for death for %s seconds','-%n Reload Speed','Weapon deploys +%n slower',''];
     const goodspy        = ['On hit: +%n Cloak charge',''];
     const badspy         = ['When getting damage: -%n Cloak charge',''];
     const goodwrench     = ['+%n more metal','Buildings deploy +%n percent faster','-%n wasting metal on repairing buildings','-%n wasting metal on upgrading buildings','+%n buildings health',''];
